Fix: PATCH requests weren't supported by RestTemplate